--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,192 @@
-body {
-  background: #1d6582;
-  background: linear-gradient(0deg,rgba(29, 101, 130, 1) 0%, rgba(33, 131, 173, 1) 32%, rgba(23, 187, 232, 1) 70%, rgba(8, 243, 255, 1) 100%);
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+body {
+  background: #1d6582;
+  background: linear-gradient(0deg,rgba(29, 101, 130, 1) 0%, rgba(33, 131, 173, 1) 32%, rgba(23, 187, 232, 1) 70%, rgba(8, 243, 255, 1) 100%);
+}
+
+/* POP_UP WINDOW (ADD LOCATION) */
+
 #popup_window {
+
+  display: grid;
+
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+
+  gap: 10px;
+
   position: fixed;
   top: 20%;
   left: 50%;
   transform: translate(-50%, 0);
-  padding: 20px;
-  backgroundColor: #fffff;
-  border: 1px solid #ccc;
-  boxShadow: 0 0 10px rgba(0,0,0,0.3);
+  padding: 1%;
+  background-color: rgba(255, 255, 255, 0.88);
+  border-radius: 10px;
+  color: black;
+  box-shadow: 0 0 15px rgba(0,0,0,0.6);
+}
+
+#popup_h2 {
+  grid-row: 1/2;
+  grid-column: 1/3;
+  text-align: center;
+}
+
+#popup_input {
+  grid-row: 2/3;
+  grid-column: 1/3;
+
+  padding: 5px;
+}
+
+#popup_button1 {
+  grid-row: 3/4;
+  grid-column: 1/2;
+}
+
+#popup_button2 {
+  grid-row: 3/4;
+  grid-column: 2/3;
+}
+
+/* NAVBAR */
+
+#navBar {
+  display: flex;
+  top: 0;
+
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.85);
+  background-color: rgba(255, 255, 255, 0.75);
+
+  width: 100%;
+  height: 90px;
+  padding: 1% 4%;
+
+  justify-content: space-between;
+}
+
+#logo {
+  height: 100%;
+}
+
+#innerNav {
+  display: flex;
+  color: black;
+
+  width: 15%;
+
+  justify-content: space-between;
+}
+
+#nameNav {
+  align-self: end;
+}
+
+/* WEATHER */
+
+#allLocations {
+  width: 85%;
+  margin: 0 auto;
+}
+
+#weatherContainer {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.40);
+  border-radius: 10px;
+  overflow: hidden;
+
+  display: grid;
+
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 4fr;
+
+  min-height: 300px;
+
+  color: black;
+}
+
+#weatherHeader {
+  width: 100%;
+  padding: 10px;
+  background-color: #8c8874;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+
+  text-align: center;
+  color: white;
+
+  grid-column: 1/4;
+  grid-row: 1/2;
+}
+
+#firstWeather {
+  grid-column: 1/2;
+
+  border-right: #8c8874 solid 1px;
+
+  background-color: #fff8e3;
+}
+
+#secondWeather {
+  grid-column: 2/3;
+
+  border-right: #8c8874 solid 1px;
+
+  background-color: #faf2cd;
+}
+
+#thirdWeather {
+  grid-column: 3/4;
+  background-color: #e1dab8;
+}
+
+#firstWeather, #secondWeather, #thirdWeather {
+
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr;
+  grid-template-columns: 1fr 1fr;
+
+  grid-row: 2/3;
+  padding-top: 6px;
+
+  font-size: 17px;
+}
+
+.weatherText {
+
+  grid-row: 2/4;
+  grid-column: 1/2;
+
+  align-self: center;
+
+  justify-self: center;
+
+}
+
+.weatherIcon {
+  grid-row: 2/3;
+  grid-column: 2/3;
+
+  width: 90px;
+
+  justify-self: center;
+  align-self: center;
+}
+
+.weatherDescr {
+  grid-row: 3/4;
+  grid-column: 2/3;
+
+  text-align: center;
+  font-style: italic;
+}
+
+
+h3 {
+  text-align: center;
+  grid-column: 1/3;
+  grid-row: 1/2;
 }
